force-app/main/default/objects/Case_Timeline__c/Case_Timeline__c.object-meta.xml
<CustomObject>
    <label>Case Timeline</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Case Timeline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Timelines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>