force-app/main/default/objects/Case_Timeline__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Case Number should automatically be populated</description>
    <inlineHelpText>The Case number should auto-populate here.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Timelines</relationshipLabel>
    <relationshipName>Case_Timelines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>