force-app/main/default/objects/Case_Timeline__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>TEXT(MONTH(Timeline_Date__c)) &amp; &quot;-&quot; &amp; TEXT(DAY(Timeline_Date__c)) &amp; &quot;-&quot; &amp; TEXT(YEAR(Timeline_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Text</type>
</CustomField>