force-app/main/default/objects/Case_Timeline__c/fields/Timeline_Activities__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Activities__c</fullName>
    <description>Enter the Timeline activities here.  Note: You have access to the a Rich Text Editor so you can Underline, Bold, make it a link, create bullet points and other editing.</description>
    <inlineHelpText>Enter the Timeline activities here.  Note: You have access to the a Rich Text Editor so you can Underline, Bold, make it a link, create bullet points and other editing.</inlineHelpText>
    <label>Timeline Activities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>