force-app/main/default/objects/Case_Timeline__c/fields/Timeline_Date__c.field-meta.xml
<CustomField>
    <fullName>Timeline_Date__c</fullName>
    <description>Date Timeline Activity occured</description>
    <inlineHelpText>Enter the date the Timeline activity occured.</inlineHelpText>
    <label>Timeline Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>